syntax = "proto3";

option go_package = "./pb";

service GameService {
    rpc CreateGame(CreateGameRequest) returns (CreateGameResponse);
    rpc GetGameByUuid(GetGameByUuidRequest) returns (GetGameByUuidResponse);
    rpc PlayGame(PlayGameRequest) returns (PlayGameResponse);
    rpc GetGamesByPlayer(GetGamesByPlayerRequest) returns (GetGamesByPlayerResponse);
}

enum GameType {
    GAME_TYPE_TEXAS_HOLDEM_BONUS = 0;
}

enum GameStatus {
    GAME_STATUS_CREATED = 0;
    GAME_STATUS_PLAYING = 1;
    GAME_STATUS_COMPLETED = 2;
}

message Game {
    string uuid = 1;
    uint64 player = 2;
    GameType type = 3;
    GameStatus status = 4;
    bytes data = 5;
}

enum BetType {
    BET_TYPE_TEXAS_HOLDEM_BONUS_ANTE = 0;
    BET_TYPE_TEXAS_HOLDEM_BONUS_BONUS = 1;
    BET_TYPE_TEXAS_HOLDEM_BONUS_FLOP = 2;
    BET_TYPE_TEXAS_HOLDEM_BONUS_TURN = 3;
    BET_TYPE_TEXAS_HOLDEM_BONUS_RIVER = 4;

    BET_TYPE_CARIBBEAN_STUD_POKER_JACKPOT = 100;
    BET_TYPE_CARIBBEAN_STUD_POKER_ANTE = 101;
    BET_TYPE_CARIBBEAN_STUD_POKER_PLAY = 102;

    BET_TYPE_CRAZY_4_POKER_ANTE = 200;
    BET_TYPE_CRAZY_4_POKER_QUEENS_UP = 201;
    BET_TYPE_CRAZY_4_POKER_SUPER_BONUS = 202;
    BET_TYPE_CRAZY_4_POKER_PLAY = 203;

    BET_TYPE_FOUR_CARD_POKER_JACKPOT = 300;
    BET_TYPE_FOUR_CARD_POKER_ACES_UP = 301;
    BET_TYPE_FOUR_CARD_POKER_ANTE = 302;
    BET_TYPE_FOUR_CARD_POKER_PLAY = 303;

    BET_TYPE_ULTIMATE_TEXAS_HOLDEM_TRIPS = 400;
    BET_TYPE_ULTIMATE_TEXAS_HOLDEM_ANTE = 401;
    BET_TYPE_ULTIMATE_TEXAS_HOLDEM_BLIND = 402;
    BET_TYPE_ULTIMATE_TEXAS_HOLDEM_PLAY = 403;

    BET_TYPE_HIGH_CARD_FLUSH_FLUSH = 500;
    BET_TYPE_HIGH_CARD_FLUSH_STRAIGHT_FLUSH = 501;
    BET_TYPE_HIGH_CARD_FLUSH_ANTE = 502;
    BET_TYPE_HIGH_CARD_FLUSH_RAISE = 503;

    BET_TYPE_THREE_CARD_POKER_6_CARD_BONUS = 600;
    BET_TYPE_THREE_CARD_POKER_PAIR_PLUS = 601;
    BET_TYPE_THREE_CARD_POKER_ANTE = 602;
    BET_TYPE_THREE_CARD_POKER_PLAY = 603;

    BET_TYPE_LET_IT_RIDE_BET = 700;
    BET_TYPE_LET_IT_RIDE_BET_2 = 701;
    BET_TYPE_LET_IT_RIDE_BET_1 = 702;
    BET_TYPE_LET_IT_RIDE_3_CARD_BONUS = 703;
    BET_TYPE_LET_IT_RIDE_BONUS = 704;
    
    BET_TYPE_MISSISSIPPI_STUD_ANTE = 800;
    BET_TYPE_MISSISSIPPI_STUD_3RD_STREET = 801;
    BET_TYPE_MISSISSIPPI_STUD_4TH_STREET = 802;
    BET_TYPE_MISSISSIPPI_STUD_5TH_STREET = 803;
    BET_TYPE_MISSISSIPPI_STUD_3RD_CARD_BONUS = 804;
}

message CreateGameRequest {
    uint64 player = 1;
    GameType type = 2;
}

message CreateGameResponse {
    Game game = 1;
}

message GetGameByUuidRequest {
    string uuid = 1;
}

message GetGameByUuidResponse {
    Game game = 1;
}

message PlayGameRequest {
    enum Action {
        ACTION_DEAL = 0;
        ACTION_PLAY = 1;
        ACTION_FOLD = 2;
        ACTION_BET = 3;
        ACTION_CHECK = 4;
    }

    message Bonus {
        int32 index = 1;
        uint64 amount = 2;
    }

    Action action = 1;
    string uuid = 2;
    uint64 amount = 3;
    repeated Bonus bonus = 4;
}

message PlayGameResponse {
    Game game = 1;
}

message GetGamesByPlayerRequest {
    uint64 player = 1;
}

message GetGamesByPlayerResponse {
    repeated Game game = 1;
}